welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:3: error: '(' expected but identifier found.
	if !estSurBiscuit()
           ^Balin:5: error: '(' expected but identifier found.
		else if porteBiscuit()
                        ^